--- a/Alerts/Base.lproj/Main.storyboard
+++ b/Alerts/Base.lproj/Main.storyboard
@@ -1,24 +1,77 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Alerts" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QmK-GC-Nro">
+                                <rect key="frame" x="186" y="208" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5uB-fT-8O2">
+                                <rect key="frame" x="160" y="370" width="94" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Basic Alert"/>
+                                <connections>
+                                    <action selector="basicAlertButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ntE-Uc-v3l"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oGm-EV-J7i">
+                                <rect key="frame" x="161" y="496" width="92" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Spec Alert"/>
+                                <connections>
+                                    <action selector="specAlertButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="R1r-rl-nBb"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Os8-Lb-qUb">
+                                <rect key="frame" x="153.5" y="625" width="107" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Action Sheet"/>
+                                <connections>
+                                    <action selector="actionSheetButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pMh-A4-uC8"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="QmK-GC-Nro" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="164" id="KdH-Ir-i9t"/>
+                            <constraint firstItem="5uB-fT-8O2" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="a05-M1-czr"/>
+                            <constraint firstItem="Os8-Lb-qUb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="bjs-c6-9F5"/>
+                            <constraint firstItem="QmK-GC-Nro" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dgR-bh-J4W"/>
+                            <constraint firstItem="Os8-Lb-qUb" firstAttribute="top" secondItem="oGm-EV-J7i" secondAttribute="bottom" constant="98" id="ecw-Jf-azL"/>
+                            <constraint firstItem="oGm-EV-J7i" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jpx-CD-J49"/>
+                            <constraint firstItem="5uB-fT-8O2" firstAttribute="top" secondItem="QmK-GC-Nro" secondAttribute="bottom" constant="141" id="mxj-cH-Pdf"/>
+                            <constraint firstItem="oGm-EV-J7i" firstAttribute="top" secondItem="5uB-fT-8O2" secondAttribute="bottom" constant="95" id="yJg-7o-M93"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="resultLabel" destination="QmK-GC-Nro" id="WcV-hc-0ej"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="20" y="66"/>
         </scene>
     </scenes>
+    <resources>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
